Nuevo componente para la vista de tabla exitoso

--- a/Front/crypto-app/src/app/app.component.html
+++ b/Front/crypto-app/src/app/app.component.html
@@ -10,6 +10,7 @@
 </style>
 
 <main class="main">
-  <app-login></app-login>
+  <!-- <app-login></app-login>  -->
+  <app-currency-table/>
 </main>
 <router-outlet />
