--- a/Front/crypto-app/src/app/app.component.html
+++ b/Front/crypto-app/src/app/app.component.html
@@ -2,15 +2,13 @@
   main {
     width: 100%;
     min-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    align-content: center;
     padding: 1rem;
   }
 </style>
 
 <main class="main">
-  <!-- <app-login></app-login>  -->
-  <app-currency-table/>
+  <app-login></app-login>
 </main>
 <router-outlet />
