--- a/Front/crypto-app/src/app/currency-table/currency-table.component.html
+++ b/Front/crypto-app/src/app/currency-table/currency-table.component.html
@@ -1,35 +1,37 @@
 <div class="currency-list-container">
-    <div class="title_button_align">
-        <div><h2 class="title_style">Mis monedas</h2></div>
-        <div width="auto">
-            <button class="btn_amarillo">Agregar Moneda</button>
-        </div>
+  <div class="title_button_align">
+    <div>
+      <h2 class="title_style">Mis monedas</h2>
     </div>
-    <!-- <button mat-raised-button color="accent" (click)="openDialog()">Agregar Moneda</button> -->
-    <div class="table_style">
+    <div>
+      <button class="btn_amarillo">Agregar Moneda</button>
+    </div>
+  </div>
+
+  <div class="table_style">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <ng-container matColumnDef="position">
+      <ng-container matColumnDef="index">
         <th mat-header-cell *matHeaderCellDef>#</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.index }}</td>
       </ng-container>
-  
+
       <ng-container matColumnDef="symbol">
         <th mat-header-cell *matHeaderCellDef>Símbolo</th>
         <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
       </ng-container>
-  
+
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Nombre</th>
         <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
-  
+
       <ng-container matColumnDef="rate">
         <th mat-header-cell *matHeaderCellDef>Tasa de cambio</th>
-        <td mat-cell *matCellDef="let element">{{ element.rate }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.rate | currency }} USD</td>
       </ng-container>
-  
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    </div>
   </div>
+</div>
