--- a/Front/crypto-app/src/app/login/login.component.html
+++ b/Front/crypto-app/src/app/login/login.component.html
@@ -1,45 +1,51 @@
-<div class="login-container">
-    <div class="sign_title">
-      <h2>Sign In</h2>
-    </div>
-    <div class="alingment">
-        <form [formGroup]="loginForm" (ngSubmit)="signInEventClick()" class="input_size">
-            <div class="form__group field">
-                <input 
-                type="text" 
-                class="form__field" 
-                formControlName="username" 
-                placeholder="Name" 
-                id="inputName" 
-                [ngClass]="{'invalid': loginForm.get('username')?.invalid && loginForm.get('username')?.touched}" 
-                />
-                <label for="inputName" class="form__label">Username</label>
-                <small *ngIf="loginForm.get('username')?.invalid && loginForm.get('username')?.touched" class="error">
-                Username is required
-                </small>
-            </div>
-            <div class="form__group field">
-                <input 
-                type="password" 
-                class="form__field" 
-                formControlName="password" 
-                placeholder="Password" 
-                id="inputPassword" 
-                [ngClass]="{'invalid': loginForm.get('password')?.invalid && loginForm.get('password')?.touched}" 
-                />
-            <label for="inputPassword" class="form__label">Password</label>
-            <small *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="error">
-            Password is required
-            </small>
+
+  <div *ngIf="isLoggedIn; else listCurrencyTable">
+    <div class="login-container">
+        <div class="sign_title">
+          <h2>Sign In</h2>
         </div>
         <div class="alingment">
-            <button  color="primary" class="btn_amarillo " type="submit" [disabled]="loginForm.invalid">
-                SIGN IN
-            </button>
-        </div>  
-        </form>
-    </div>
+            <form [formGroup]="loginForm" (ngSubmit)="signInEventClick()" class="input_size">
+                <div class="form__group field">
+                    <input 
+                    type="text" 
+                    class="form__field" 
+                    formControlName="username" 
+                    placeholder="Name" 
+                    id="inputName" 
+                    [ngClass]="{'invalid': loginForm.get('username')?.invalid && loginForm.get('username')?.touched}" 
+                    />
+                    <label for="inputName" class="form__label">Username</label>
+                    <small *ngIf="loginForm.get('username')?.invalid && loginForm.get('username')?.touched" class="error">
+                    Username is required
+                    </small>
+                </div>
+                <div class="form__group field">
+                    <input 
+                    type="password" 
+                    class="form__field" 
+                    formControlName="password" 
+                    placeholder="Password" 
+                    id="inputPassword" 
+                    [ngClass]="{'invalid': loginForm.get('password')?.invalid && loginForm.get('password')?.touched}" 
+                    />
+                <label for="inputPassword" class="form__label">Password</label>
+                <small *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="error">
+                Password is required
+                </small>
+            </div>
+            <div class="alingment">
+                <button  color="primary" class="btn_amarillo " type="submit" [disabled]="loginForm.invalid">
+                    SIGN IN
+                </button>
+            </div>  
+            </form>
+        </div>
+      </div>
   </div>
+  <ng-template #listCurrencyTable>
+    <app-currency-table [childMessage]="dataCurrencyListByUser"></app-currency-table>
+  </ng-template>
 
 
 
