--- a/Front/crypto-app/src/app/login/login.component.scss
+++ b/Front/crypto-app/src/app/login/login.component.scss
@@ -1,10 +1,9 @@
 
 .login-container {
-    width: 400px;
-    display: flexbox;
+    width: 30%;
+    display: block;
+    justify-self: center;
     flex-direction: column;
-    align-content: center;
-    justify-items: center;
     padding: 10px 10px 10px 10px;
   }
   
