--- a/Front/crypto-app/src/app/currency-table/currency-table.component.html
+++ b/Front/crypto-app/src/app/currency-table/currency-table.component.html
@@ -27,11 +27,13 @@
 
       <ng-container matColumnDef="rate">
         <th mat-header-cell *matHeaderCellDef>Tasa de cambio</th>
-        <td mat-cell *matCellDef="let element">{{ element.rate | currency }} USD</td>
+        <td mat-cell *matCellDef="let element">
+          {{ element.rate | currency }} USD
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
 </div>
