Se refactorizó el proyecto y se incluye el modelo de arquitectura REDUX

--- a/Front/crypto-app/src/app/app.component.html
+++ b/Front/crypto-app/src/app/app.component.html
@@ -1,14 +1,4 @@
-<style>
-  main {
-    width: 100%;
-    min-height: 100%;
-    display: block;
-    align-content: center;
-    padding: 1rem;
-  }
-</style>
-
 <main class="main">
-  <app-login></app-login>
+  <router-outlet></router-outlet>
 </main>
-<router-outlet />
+
