--- a/Front/crypto-app/src/app/components/login/login.component.scss
+++ b/Front/crypto-app/src/app/components/login/login.component.scss
@@ -4,6 +4,7 @@
   justify-self: center;
   flex-direction: column;
   padding: 10px 10px 10px 10px;
+  background-color: #fcfcfc
 }
 
 .full-width {
