--- a/Front/crypto-app/src/app/components/currency-table/currency-table.component.html
+++ b/Front/crypto-app/src/app/components/currency-table/currency-table.component.html
@@ -4,15 +4,15 @@
       <h2 class="title_style">Mis monedas</h2>
     </div>
     <div>
-      <button class="btn_amarillo">Agregar Moneda</button>
+      <button class="btn_amarillo">AGREGAR MONEDA</button>
     </div>
   </div>
 
   <div class="table_style">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="userCurrencies" class="mat-elevation-z8">
       <ng-container matColumnDef="index">
         <th mat-header-cell *matHeaderCellDef>#</th>
-        <td mat-cell *matCellDef="let element">{{ element.index }}</td>
+        <td mat-cell *matCellDef="let i = index">{{ i + 1 }}</td>
       </ng-container>
 
       <ng-container matColumnDef="symbol">
@@ -25,10 +25,10 @@
         <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="rate">
+      <ng-container matColumnDef="exchange_rate">
         <th mat-header-cell *matHeaderCellDef>Tasa de cambio</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.rate | currency }} USD
+          {{ element.exchange_rate | currency }} USD
         </td>
       </ng-container>
 
