--- a/Front/crypto-app/src/app/components/login/login.component.html
+++ b/Front/crypto-app/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="isLoggedIn; else listCurrencyTable">
+  <b *ngIf="(loading$| async)">Cargando...</b>
   <div class="login-container">
     <div class="sign_title">
       <h2>Sign In</h2>
@@ -72,7 +73,5 @@
   </div>
 </div>
 <ng-template #listCurrencyTable>
-  <app-currency-table
-    [childMessage]="dataCurrencyListByUser"
-  ></app-currency-table>
+  <app-currency-table></app-currency-table>
 </ng-template>
