Se modifica el endpoint /list-user --> Authentication. Se implementan formas de obtener la información del Store

--- a/Front/crypto-app/src/app/components/currency-table/currency-table.component.html
+++ b/Front/crypto-app/src/app/components/currency-table/currency-table.component.html
@@ -4,7 +4,7 @@
       <h2 class="title_style">Mis monedas</h2>
     </div>
     <div>
-      <button class="btn_amarillo">AGREGAR MONEDA</button>
+      <button (click)="addCurrenciesEventClick()" class="btn_amarillo">AGREGAR MONEDA</button>
     </div>
   </div>
 
