Nuevas implementaciones con Tailwind

--- a/Front/crypto-app/src/app/components/login/login.component.html
+++ b/Front/crypto-app/src/app/components/login/login.component.html
@@ -1,6 +1,5 @@
   <div *ngIf="(loading$| async)">
-    <mat-spinner></mat-spinner>
-    <p>Cargando...</p>
+    <app-modal></app-modal>
   </div>
   <div  class="login-container">
     <div class="sign_title">
